cmake_minimum_required(VERSION 3.26)
project(Learning C)

set(CMAKE_C_STANDARD 11)

add_executable(Learning
        2.12.1.c
        2.12.2.c
        2.12.3.c
        2.12.4.c
        2.12.5.c
        2.12.6.c
        2.12.7.c
        2.12.8.c
        3.1.1.c
        3.11.2.c
        test.c
        作业2.c
        作业1.c
        3.11.3.c
        3.11.4.c
        3.11.5.c
        3.11.6.c
        3.11.7.c
        3.11.8.c
        4.7.5.c
        4.7.6.c
        4.8.1.c
        4.8.2.c
        4.8.3.c
        4.8.4.c
        4.8.5.c
        4.8.6.c
        4.8.7.c
        4.8.8.c
        5.11.1.c
        5.11.2.c
        5.11.3.c
        5.11.5.c
        5.11.6.c
        5.11.7.c)
