cmake_minimum_required(VERSION 3.26)
project(Learning C)

set(CMAKE_C_STANDARD 11)

add_executable(Learning
        Chapter2/2.12.1.c
        Chapter2/2.12.2.c
        Chapter2/2.12.3.c
        Chapter2/2.12.4.c
        Chapter2/2.12.5.c
        Chapter2/2.12.6.c
        Chapter2/2.12.7.c
        Chapter2/2.12.8.c
        Chapter3/3.1.1.c
        Chapter3/3.11.2.c
        Homework/作业2.c
        Homework/作业1.c
        Chapter3/3.11.3.c
        Chapter3/3.11.4.c
        Chapter3/3.11.5.c
        Chapter3/3.11.6.c
        Chapter3/3.11.7.c
        Chapter3/3.11.8.c
        Chapter4/4.7.5.c
        Chapter4/4.7.6.c
        Chapter4/4.8.1.c
        Chapter4/4.8.2.c
        Chapter4/4.8.3.c
        Chapter4/4.8.4.c
        Chapter4/4.8.5.c
        Chapter4/4.8.6.c
        Chapter4/4.8.7.c
        Chapter4/4.8.8.c
        Chapter5/5.11.1.c
        Chapter5/5.11.2.c
        Chapter5/5.11.3.c
        Chapter5/5.11.5.c
        Chapter5/5.11.6.c
        Chapter5/5.11.7.c
        Chapter5/5.11.8.c
        Chapter5/5.11.9.c
        Chapter6/6.16.1.c
        Chapter6/6.16.2.c
        Chapter6/6.16.3.c
        Chapter6/6.16.4.c
        Chapter6/6.16.5.c
        Chapter6/6.16.6.c
        Chapter6/6.16.7.c
        Homework/Homework2.c
        Homework/Homework3.c
        Homework/Homework4.c
        Homework/Homework5.c
        Homework/Homework6.c
        Homework/Homework7.c
        Chapter7/7.2.c
)
