cmake_minimum_required(VERSION 3.26)
project(Learning C)

set(CMAKE_C_STANDARD 11)

add_executable(Learning
        Chapter2/2.12.1.c
        Chapter2/2.12.2.c
        Chapter2/2.12.3.c
        Chapter2/2.12.4.c
        Chapter2/2.12.5.c
        Chapter2/2.12.6.c
        Chapter2/2.12.7.c
        Chapter2/2.12.8.c
        Chapter3/3.1.1.c
        Chapter3/3.11.2.c
        Homework/作业1.c
        Chapter3/3.11.3.c
        Chapter3/3.11.4.c
        Chapter3/3.11.5.c
        Chapter3/3.11.6.c
        Chapter3/3.11.7.c
        Chapter3/3.11.8.c
        Chapter4/4.7.5.c
        Chapter4/4.7.6.c
        Chapter4/4.8.1.c
        Chapter4/4.8.2.c
        Chapter4/4.8.3.c
        Chapter4/4.8.4.c
        Chapter4/4.8.5.c
        Chapter4/4.8.6.c
        Chapter4/4.8.7.c
        Chapter4/4.8.8.c
        Chapter5/5.11.1.c
        Chapter5/5.11.2.c
        Chapter5/5.11.3.c
        Chapter5/5.11.5.c
        Chapter5/5.11.6.c
        Chapter5/5.11.7.c
        Chapter5/5.11.8.c
        Chapter5/5.11.9.c
        Chapter6/6.16.1.c
        Chapter6/6.16.2.c
        Chapter6/6.16.3.c
        Chapter6/6.16.4.c
        Chapter6/6.16.5.c
        Chapter6/6.16.6.c
        Chapter6/6.16.7.c
        "Homework/Part1(Done)/Homework2.c"
        "Homework/Part1(Done)/Homework3.c"
        "Homework/Part1(Done)/Homework4.c"
        "Homework/Part1(Done)/Homework5.c"
        "Homework/Part1(Done)/Homework6.c"
        "Homework/Part1(Done)/Homework7.c"
        Chapter7/7.2.c
        "Homework/Part1(Done)/Homework10.c"
        Chapter9/9.11.1.c
        Chapter9/9.11.2.c
        Chapter9/9.11.3.c
        Chapter9/9.11.4.c
        Chapter9/9.11.5.c
        "Homework/Part3(Done)/Homework21.c"
        "Homework/Part1(Done)/Homework7.c"
        "Homework/Part3(Done)/Homework23.c"
        "Homework/Part3(Done)/Homework24.c"
        "Homework/Part3(Done)/Homework25.c"
        "Homework/Part3(Done)/Homework26.c"
        "Homework/Part3(Done)/Homework27.c"
        "Homework/Part3(Done)/Homework28.c"
        "Homework/Part3(Done)/Homework29.c"
        "Homework/Part3(Done)/Homework30.c"
        Homework/Part2/Homework19.c
        "Homework/Part1(Done)/Homework9.c"
        Homework/Part4/Homework31.c
        Homework/Part4/Homework32.c
        Homework/Part4/Homework33.c
        Homework/Part4/Homework34.c
        Homework/Part4/Homework35.c
        Homework/Part4/Homework36.c
        Homework/Part4/Homework37.c
        Homework/Part4/Homework40.c
        Homework/Part4/Homework39.c
        Homework/Part4/Homework38.c
        "Homework/Part1(Done)/Homework1.c"
        Homework/Part5/Homework41.c
        Homework/Part5/Homework42.c
        Homework/Part5/Homework43.c
        Homework/Part5/Homework44.c
)
